# zenOS

./: README.md  pyproject.toml  requirements.txt  test_pkm.py  test_tts_queue_system.py  tts_config.json  tts_integration_example.py  tts_queue_system.py
examples/: pkm_demo.py
n8n/: README.md  setup.sh  zenOS_template_selector.json
zen/: cli.py
zen/agents/: __init__.py
zen/pkm/: README.md  __init__.py  agent.py  cli.py  config.py  extractor.py  models.py  processor.py  scheduler.py  storage.py  zenos-pkm.yaml
